--- a/usr.bin/ctlstat/Makefile
+++ b/usr.bin/ctlstat/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD$
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/ctlstat/Makefile 229997 2012-01-12 00:34:33Z ken $
 
 PROG=		ctlstat
 MAN=		ctlstat.8
