--- a/rescue/rescue/Makefile
+++ b/rescue/rescue/Makefile
@@ -1,4 +1,5 @@
-#$MidnightBSD$
+# $MidnightBSD$
+#$FreeBSD: stable/10/rescue/rescue/Makefile 315781 2017-03-23 04:47:43Z ngie $
 #	@(#)Makefile	8.1 (Berkeley) 6/2/93
 
 MAN=
@@ -89,28 +90,38 @@ CRUNCH_SUPPRESS_LINK_-tcsh= 1
 #
 CRUNCH_SRCDIRS+= sbin
 CRUNCH_PROGS_sbin= badsect					\
-	camcontrol ccdconfig clri devfs dmesg dump		\
-	fsck fsck_ffs fsck_msdosfs fsdb		\
+	camcontrol clri devfs dmesg dump			\
+	dumpfs dumpon fsck fsck_ffs fsck_msdosfs fsdb		\
 	fsirand gbde geom ifconfig init 			\
 	kldconfig kldload kldstat kldunload ldconfig 		\
 	md5 mdconfig mdmfs mknod mount mount_cd9660		\
 	mount_msdosfs mount_nfs mount_nullfs			\
 	mount_udf mount_unionfs newfs				\
 	newfs_msdos nos-tun ping reboot				\
-	restore rcorder route routed rtquery rtsol savecore	\
-	spppcontrol swapon sysctl tunefs umount
+	restore rcorder route savecore		 		\
+	shutdown spppcontrol swapon sysctl tunefs umount
 
 .if ${MK_ATM} != "no"
 CRUNCH_PROGS_sbin+= atmconfig
 .endif
 
+.if ${MK_CCD} != "no"
+CRUNCH_PROGS_sbin+= ccdconfig
+.endif
+
 .if ${MK_INET6_SUPPORT} != "no"
 CRUNCH_PROGS_sbin+= ping6
+CRUNCH_PROGS_sbin+= rtsol
 .endif
 
 .if ${MK_IPFILTER} != "no"
 CRUNCH_PROGS_sbin+= ipf
 .endif
+
+.if ${MK_ROUTED} != "no"
+CRUNCH_PROGS_sbin+= routed rtquery
+.endif
+
 .if ${MK_ZFS} != "no"
 CRUNCH_PROGS_sbin+= zfs
 CRUNCH_PROGS_sbin+= zpool
@@ -134,11 +145,25 @@ CRUNCH_LIBS+= -lgeom -lbsdxml -lkiconv
 .if ${MK_OPENSSL} == "no"
 CRUNCH_LIBS+= -lmd
 .endif
-CRUNCH_LIBS+= -lsbuf -lufs -lz
+CRUNCH_LIBS+= -lmt -lsbuf -lufs -lz
 
 .if ${MACHINE_CPUARCH} == "i386"
 CRUNCH_PROGS_sbin+= bsdlabel sconfig fdisk
 CRUNCH_ALIAS_bsdlabel= disklabel
+#CRUNCH_PROGS+= mount_smbfs
+#CRUNCH_LIBS+= -lsmb
+.endif
+
+.if ${MACHINE} == "pc98"
+CRUNCH_SRCDIR_fdisk= $(.CURDIR)/../../sbin/fdisk_pc98
+.endif
+
+.if ${MACHINE_CPUARCH} == "ia64"
+CRUNCH_PROGS_sbin+= mca
+.endif
+
+.if ${MACHINE_CPUARCH} == "sparc64"
+CRUNCH_PROGS_sbin+= bsdlabel sunlabel
 .endif
 
 .if ${MACHINE_CPUARCH} == "amd64"
@@ -162,6 +187,7 @@ CRUNCH_ALIAS_restore= rrestore
 CRUNCH_ALIAS_dump= rdump
 CRUNCH_ALIAS_fsck_ffs= fsck_4.2bsd fsck_ufs
 CRUNCH_ALIAS_geom= glabel gpart
+CRUNCH_ALIAS_shutdown= poweroff
 
 # dhclient has historically been troublesome...
 CRUNCH_PROGS_sbin+= dhclient
@@ -172,7 +198,7 @@ CRUNCH_BUILDOPTS_dhclient= -DRELEASE_CRUNCH -Dlint
 #
 CRUNCH_SRCDIRS+= usr.bin
 
-CRUNCH_PROGS_usr.bin= head mt nc sed tail tee
+CRUNCH_PROGS_usr.bin= head mt sed tail tee
 
 CRUNCH_PROGS_usr.bin+= gzip
 CRUNCH_ALIAS_gzip= gunzip gzcat zcat
@@ -194,6 +220,10 @@ CRUNCH_LIBS+= -lcrypto
 .endif
 CRUNCH_LIBS+= -lmd
 
+.if ${MK_NETCAT} != "no"
+CRUNCH_PROGS_usr.bin+=	nc
+.endif
+
 CRUNCH_PROGS_usr.bin+= vi
 CRUNCH_ALIAS_vi= ex
 
@@ -211,6 +241,11 @@ CRUNCH_PROGS_usr.sbin+= chown
 CRUNCH_ALIAS_chown= chgrp
 ##################################################################
 CRUNCH_LIBS+= -lm
+
+.if ${MK_ISCSI} != "no"
+CRUNCH_PROGS_usr.bin+=	iscsictl
+CRUNCH_PROGS_usr.sbin+=	iscsid
+.endif
 
 .include <bsd.crunchgen.mk>
 .include <bsd.prog.mk>
