--- a/usr.bin/ee/Makefile
+++ b/usr.bin/ee/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/ee/Makefile 246592 2013-02-09 13:31:59Z antoine $
 
 .PATH:	${.CURDIR}/../../contrib/ee
 
@@ -13,10 +14,10 @@ LDADD=	-lncurses
 
 WARNS?=	2
 
-NLS=	en_US.US-ASCII fr_FR.ISO8859-1 de_DE.ISO8859-1 pl_PL.ISO8859-2 \
+NLS=	C fr_FR.ISO8859-1 de_DE.ISO8859-1 pl_PL.ISO8859-2 \
 	uk_UA.KOI8-U pt_BR.ISO8859-1 ru_RU.KOI8-R hu_HU.ISO8859-2
 
-NLSLINKS_en_US.US-ASCII= en_US.ISO8859-1 en_US.ISO8859-15
+NLSLINKS_C= en_US.ISO8859-1 en_US.ISO8859-15
 NLSLINKS_fr_FR.ISO8859-1= fr_BE.ISO8859-1 fr_BE.ISO8859-15 \
         fr_CA.ISO8859-1 fr_CA.ISO8859-15 fr_CH.ISO8859-1 fr_CH.ISO8859-15 \
 	fr_FR.ISO8859-15
