--- a/usr.bin/cmp/Makefile
+++ b/usr.bin/cmp/Makefile
@@ -1,8 +1,14 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: src/usr.bin/cmp/Makefile,v 1.7 2005/08/23 13:13:13 brian Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/cmp/Makefile 276490 2015-01-01 02:04:44Z ngie $
+
+.include <bsd.own.mk>
 
 PROG=	cmp
 SRCS=	cmp.c link.c misc.c regular.c special.c
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=	tests
+.endif
 
 .include <bsd.prog.mk>
