--- a/usr.bin/chat/Makefile
+++ b/usr.bin/chat/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/chat/Makefile 121784 2003-10-31 06:22:03Z kientzle $
 
 # I once used this extensively, but no longer have a modem.  Feel free
 # to ask me questions about it, but I disclaim ownership now.  -Peter
