--- a/usr.bin/bzip2recover/Makefile
+++ b/usr.bin/bzip2recover/Makefile
@@ -1,10 +1,12 @@
-# $FreeBSD: src/usr.bin/bzip2recover/Makefile,v 1.3 2004/12/21 08:47:29 ru Exp $
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/bzip2recover/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 BZ2DIR=	${.CURDIR}/../../contrib/bzip2
 .PATH: ${BZ2DIR}
 
 PROG=	bzip2recover
-NO_MAN=
+MAN=
+
+NO_WMISSING_VARIABLE_DECLARATIONS=
 
 .include <bsd.prog.mk>
