--- a/.gitattributes
+++ b/.gitattributes
@@ -75633,7 +75633,7 @@ usr.bin/calendar/calendars/pt_BR.UTF-8/calendar.mcommemorative -text
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.all -text
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.common -text
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.holiday -text
-usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.military -text
+usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.military -text svneol=unset#application/octet-stream
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.msk -text
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.orthodox -text
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.pagan -text
