--- a/.gitattributes
+++ b/.gitattributes
@@ -75652,6 +75652,38 @@ usr.bin/calendar/paskha.c -text
 usr.bin/calendar/pathnames.h -text
 usr.bin/calendar/pom.c -text
 usr.bin/calendar/sunpos.c -text
+usr.bin/calendar/tests/Makefile svneol=native#text/plain
+usr.bin/calendar/tests/calendar.calibrate -text
+usr.bin/calendar/tests/legacy_test.sh svneol=native#text/plain
+usr.bin/calendar/tests/regress.a1.out -text
+usr.bin/calendar/tests/regress.a2.out -text
+usr.bin/calendar/tests/regress.a3.out -text
+usr.bin/calendar/tests/regress.a4.out -text
+usr.bin/calendar/tests/regress.a5.out -text
+usr.bin/calendar/tests/regress.b1.out -text
+usr.bin/calendar/tests/regress.b2.out -text
+usr.bin/calendar/tests/regress.b3.out -text
+usr.bin/calendar/tests/regress.b4.out -text
+usr.bin/calendar/tests/regress.b5.out -text
+usr.bin/calendar/tests/regress.s1.out -text
+usr.bin/calendar/tests/regress.s2.out -text
+usr.bin/calendar/tests/regress.s3.out -text
+usr.bin/calendar/tests/regress.s4.out -text
+usr.bin/calendar/tests/regress.sh svneol=native#text/plain
+usr.bin/calendar/tests/regress.w0-1.out -text
+usr.bin/calendar/tests/regress.w0-2.out -text
+usr.bin/calendar/tests/regress.w0-3.out -text
+usr.bin/calendar/tests/regress.w0-4.out -text
+usr.bin/calendar/tests/regress.w0-5.out -text
+usr.bin/calendar/tests/regress.w0-6.out -text
+usr.bin/calendar/tests/regress.w0-7.out -text
+usr.bin/calendar/tests/regress.wn-1.out -text
+usr.bin/calendar/tests/regress.wn-2.out -text
+usr.bin/calendar/tests/regress.wn-3.out -text
+usr.bin/calendar/tests/regress.wn-4.out -text
+usr.bin/calendar/tests/regress.wn-5.out -text
+usr.bin/calendar/tests/regress.wn-6.out -text
+usr.bin/calendar/tests/regress.wn-7.out -text
 usr.bin/cap_mkdb/Makefile -text
 usr.bin/cap_mkdb/cap_mkdb.1 -text
 usr.bin/cap_mkdb/cap_mkdb.c -text
