--- a/.gitattributes
+++ b/.gitattributes
@@ -75636,6 +75636,12 @@ usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.military -text svneol=unset#app
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.msk -text
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.orthodox -text
 usr.bin/calendar/calendars/ru_RU.KOI8-R/calendar.pagan -text
+usr.bin/calendar/calendars/ru_RU.UTF-8/calendar.all -text svneol=unset#application/octet-stream
+usr.bin/calendar/calendars/ru_RU.UTF-8/calendar.common -text svneol=unset#application/octet-stream
+usr.bin/calendar/calendars/ru_RU.UTF-8/calendar.holiday -text svneol=unset#application/octet-stream
+usr.bin/calendar/calendars/ru_RU.UTF-8/calendar.military -text svneol=unset#application/octet-stream
+usr.bin/calendar/calendars/ru_RU.UTF-8/calendar.orthodox -text svneol=unset#application/octet-stream
+usr.bin/calendar/calendars/ru_RU.UTF-8/calendar.pagan -text svneol=unset#application/octet-stream
 usr.bin/calendar/calendars/uk_UA.KOI8-U/calendar.all -text
 usr.bin/calendar/calendars/uk_UA.KOI8-U/calendar.holiday -text
 usr.bin/calendar/calendars/uk_UA.KOI8-U/calendar.misc -text
