update man pages

--- a/.gitattributes
+++ b/.gitattributes
@@ -55659,6 +55659,7 @@ secure/lib/libssl/man/SSL_CTX_set_session_cache_mode.3 -text
 secure/lib/libssl/man/SSL_CTX_set_session_id_context.3 -text
 secure/lib/libssl/man/SSL_CTX_set_ssl_version.3 -text
 secure/lib/libssl/man/SSL_CTX_set_timeout.3 -text
+secure/lib/libssl/man/SSL_CTX_set_tlsext_status_cb.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_set_tlsext_ticket_key_cb.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_set_tmp_dh_callback.3 -text
 secure/lib/libssl/man/SSL_CTX_set_tmp_rsa_callback.3 -text
