--- a/.gitattributes
+++ b/.gitattributes
@@ -55381,29 +55381,29 @@ secure/lib/libcrypto/engines/libgost/Makefile svneol=native#text/plain
 secure/lib/libcrypto/engines/libnuron/Makefile -text
 secure/lib/libcrypto/engines/libsureware/Makefile -text
 secure/lib/libcrypto/engines/libubsec/Makefile -text
-secure/lib/libcrypto/i386/aes-586.s svneol=native#text/plain
-secure/lib/libcrypto/i386/aesni-x86.s svneol=native#text/plain
-secure/lib/libcrypto/i386/bf-586.s -text
-secure/lib/libcrypto/i386/bf-686.s -text
-secure/lib/libcrypto/i386/bn-586.s -text
-secure/lib/libcrypto/i386/cast-586.s -text
-secure/lib/libcrypto/i386/cmll-x86.s svneol=native#text/plain
-secure/lib/libcrypto/i386/co-586.s -text
-secure/lib/libcrypto/i386/crypt586.s -text
-secure/lib/libcrypto/i386/des-586.s -text
-secure/lib/libcrypto/i386/ghash-x86.s svneol=native#text/plain
-secure/lib/libcrypto/i386/md5-586.s -text
-secure/lib/libcrypto/i386/rc4-586.s -text
-secure/lib/libcrypto/i386/rc5-586.s -text
-secure/lib/libcrypto/i386/rmd-586.s -text
-secure/lib/libcrypto/i386/sha1-586.s -text
-secure/lib/libcrypto/i386/sha256-586.s svneol=native#text/plain
-secure/lib/libcrypto/i386/sha512-586.s svneol=native#text/plain
-secure/lib/libcrypto/i386/vpaes-x86.s svneol=native#text/plain
-secure/lib/libcrypto/i386/wp-mmx.s svneol=native#text/plain
-secure/lib/libcrypto/i386/x86-gf2m.s svneol=native#text/plain
-secure/lib/libcrypto/i386/x86-mont.s svneol=native#text/plain
-secure/lib/libcrypto/i386/x86cpuid.s svneol=native#text/plain
+secure/lib/libcrypto/i386/aes-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/aesni-x86.S svneol=native#text/plain
+secure/lib/libcrypto/i386/bf-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/bf-686.S svneol=native#text/plain
+secure/lib/libcrypto/i386/bn-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/cast-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/cmll-x86.S svneol=native#text/plain
+secure/lib/libcrypto/i386/co-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/crypt586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/des-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/ghash-x86.S svneol=native#text/plain
+secure/lib/libcrypto/i386/md5-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/rc4-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/rc5-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/rmd-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/sha1-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/sha256-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/sha512-586.S svneol=native#text/plain
+secure/lib/libcrypto/i386/vpaes-x86.S svneol=native#text/plain
+secure/lib/libcrypto/i386/wp-mmx.S svneol=native#text/plain
+secure/lib/libcrypto/i386/x86-gf2m.S svneol=native#text/plain
+secure/lib/libcrypto/i386/x86-mont.S svneol=native#text/plain
+secure/lib/libcrypto/i386/x86cpuid.S svneol=native#text/plain
 secure/lib/libcrypto/man/ASN1_OBJECT_new.3 -text
 secure/lib/libcrypto/man/ASN1_STRING_length.3 -text
 secure/lib/libcrypto/man/ASN1_STRING_new.3 -text
