--- a/secure/usr.bin/bdes/Makefile
+++ b/secure/usr.bin/bdes/Makefile
@@ -1,5 +1,6 @@
+# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: src/secure/usr.bin/bdes/Makefile,v 1.14 2004/02/23 20:25:27 johan Exp $
+# $FreeBSD: stable/10/secure/usr.bin/bdes/Makefile 126178 2004-02-23 20:25:27Z johan $
 
 PROG=	bdes
 
