--- a/secure/libexec/Makefile.inc
+++ b/secure/libexec/Makefile.inc
@@ -1,4 +1,5 @@
-# $FreeBSD: src/secure/libexec/Makefile.inc,v 1.8 2003/04/30 07:54:38 ru Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/secure/libexec/Makefile.inc 114283 2003-04-30 07:54:39Z ru $
 
 BINDIR?=	/usr/libexec
 
