--- a/etc/bluetooth/hcsecd.conf
+++ b/etc/bluetooth/hcsecd.conf
@@ -1,6 +1,5 @@
-# $Id: hcsecd.conf,v 1.2 2006-08-28 01:35:54 laffer1 Exp $
-# $FreeBSD: src/etc/bluetooth/hcsecd.conf,v 1.2 2004/06/06 11:46:28 schweikh Exp $
 # $MidnightBSD$
+# $Id: hcsecd.conf,v 1.1 2003/05/26 22:50:47 max Exp $
 #
 # HCI security daemon configuration file
 #
@@ -42,7 +41,7 @@ device {
 }
 
 device {
-	bdaddr	00:1:2:3:4:5;
+	bdaddr	00:01:02:03:04:05;
 	name	"Dummy";
 	key	nokey;
 	pin	"0000";
