--- a/.gitattributes
+++ b/.gitattributes
@@ -48151,6 +48151,12 @@ crypto/openssl/util/x86asm.sh -text
 etc/Makefile -text
 etc/amd.map -text
 etc/apmd.conf -text
+etc/autofs/Makefile svneol=native#text/plain
+etc/autofs/include_ldap -text
+etc/autofs/special_hosts -text
+etc/autofs/special_media -text
+etc/autofs/special_noauto -text
+etc/autofs/special_null -text
 etc/bluetooth/Makefile -text
 etc/bluetooth/hcsecd.conf -text
 etc/bluetooth/hosts -text
