--- a/etc/ddb.conf
+++ b/etc/ddb.conf
@@ -1,4 +1,4 @@
-# $FreeBSD$
+# $MidnightBSD$
 #
 #  This file is read when going to multi-user and its contents piped thru
 #  ``ddb'' to define debugging scripts.
