update usb configs

--- a/etc/devd/uath.conf
+++ b/etc/devd/uath.conf
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/etc/devd/uath.conf 223566 2011-06-26 11:37:24Z gavin $
 #
 # Atheros USB wireless network device specific devd events
 
