--- a/share/i18n/csmapper/GEORGIAN/Makefile
+++ b/share/i18n/csmapper/GEORGIAN/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD$
+# $MidnightBSD$
+# $FreeBSD: stable/10/share/i18n/csmapper/GEORGIAN/Makefile 219019 2011-02-25 00:04:39Z gabor $
 # $NetBSD: Makefile.inc,v 1.3 2008/10/25 22:35:36 apb Exp $
 
 CODE=	GEORGIAN
