--- a/.gitattributes
+++ b/.gitattributes
@@ -74666,6 +74666,9 @@ tools/tools/tinderbox/www/Makefile -text
 tools/tools/tinderbox/www/index.cgi -text
 tools/tools/tinderbox/www/tb.css -text
 tools/tools/usb/print-usb-if-vids.sh -text
+tools/tools/vimage/Makefile svneol=native#text/plain
+tools/tools/vimage/vimage.8 svneol=native#text/plain
+tools/tools/vimage/vimage.c svneol=native#text/plain
 tools/tools/vop_table/README -text
 tools/tools/vop_table/vop_table.pl -text
 tools/tools/vop_table/vop_table.tcl -text
