--- a/.gitattributes
+++ b/.gitattributes
@@ -57781,6 +57781,7 @@ share/man/man5/bluetooth.hosts.5 -text
 share/man/man5/bluetooth.protocols.5 -text
 share/man/man5/boot.config.5 -text
 share/man/man5/bsd.mport.mk.5 -text
+share/man/man5/cd9660.5 svneol=native#text/plain
 share/man/man5/core.5 -text
 share/man/man5/devfs.5 -text
 share/man/man5/devfs.conf.5 -text
