--- a/share/man/man5/Makefile
+++ b/share/man/man5/Makefile
@@ -1,6 +1,6 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
 #	$FreeBSD: src/share/man/man5/Makefile,v 1.58.2.2 2005/12/05 18:54:45 emax Exp $
-# $MidnightBSD: src/share/man/man5/Makefile,v 1.4 2010/12/25 13:10:49 laffer1 Exp $
+# $MidnightBSD$
 
 .include <bsd.own.mk>
 
@@ -8,9 +8,6 @@
 MAN=	acct.5 \
 	ar.5 \
 	a.out.5 \
-	bluetooth.device.conf.5 \
-	bluetooth.hosts.5 \
-	bluetooth.protocols.5 \
 	${_boot.config.5} \
 	bsd.mport.mk.5 \
 	core.5 \
@@ -67,8 +64,7 @@ MAN=	acct.5 \
 	stab.5 \
 	style.Makefile.5 \
 	sysctl.conf.5 \
-	tmpfs.5 \
-	xfs.5
+	tmpfs.5
 
 MLINKS=	dir.5 dirent.5
 MLINKS+=fs.5 inode.5
