--- a/.gitattributes
+++ b/.gitattributes
@@ -57734,6 +57734,7 @@ share/man/man4/uslcom.4 -text
 share/man/man4/utopia.4 -text
 share/man/man4/uvisor.4 -text
 share/man/man4/uvscom.4 -text
+share/man/man4/vale.4 svneol=native#text/plain
 share/man/man4/vga.4 -text
 share/man/man4/vge.4 -text
 share/man/man4/viapm.4 -text
@@ -57742,14 +57743,19 @@ share/man/man4/vinum.4 -text
 share/man/man4/virtio.4 -text
 share/man/man4/virtio_balloon.4 -text
 share/man/man4/virtio_blk.4 -text
+share/man/man4/virtio_console.4 svneol=native#text/plain
+share/man/man4/virtio_random.4 svneol=native#text/plain
 share/man/man4/virtio_scsi.4 -text
 share/man/man4/vkbd.4 -text
 share/man/man4/vlan.4 -text
+share/man/man4/vmx.4 svneol=native#text/plain
 share/man/man4/vpo.4 -text
 share/man/man4/vr.4 -text
+share/man/man4/vt.4 svneol=native#text/plain
 share/man/man4/vte.4 -text
 share/man/man4/vtnet.4 svneol=native#text/plain
 share/man/man4/vxge.4 -text
+share/man/man4/vxlan.4 svneol=native#text/plain
 share/man/man4/watchdog.4 -text
 share/man/man4/wb.4 -text
 share/man/man4/wbwd.4 -text
@@ -57763,6 +57769,7 @@ share/man/man4/wlan_tkip.4 -text
 share/man/man4/wlan_wep.4 -text
 share/man/man4/wlan_xauth.4 -text
 share/man/man4/wpi.4 -text
+share/man/man4/wsp.4 svneol=native#text/plain
 share/man/man4/xe.4 -text
 share/man/man4/xen.4 -text
 share/man/man4/xhci.4 -text
