update man pages

--- a/.gitattributes
+++ b/.gitattributes
@@ -57568,28 +57568,39 @@ share/man/man4/pcic.4 -text
 share/man/man4/pcii.4 -text
 share/man/man4/pcm.4 -text
 share/man/man4/pcn.4 -text
+share/man/man4/pf.4 svneol=native#text/plain
+share/man/man4/pflog.4 svneol=native#text/plain
+share/man/man4/pfsync.4 svneol=native#text/plain
 share/man/man4/pim.4 -text
+share/man/man4/pms.4 svneol=native#text/plain
 share/man/man4/polling.4 -text
 share/man/man4/ppbus.4 -text
 share/man/man4/ppc.4 -text
 share/man/man4/ppi.4 -text
 share/man/man4/ppp.4 -text
+share/man/man4/procdesc.4 svneol=native#text/plain
 share/man/man4/psm.4 -text
 share/man/man4/pst.4 -text
 share/man/man4/pt.4 -text
 share/man/man4/pts.4 -text
 share/man/man4/pty.4 -text
 share/man/man4/puc.4 -text
+share/man/man4/qlnxe.4 svneol=native#text/plain
 share/man/man4/qlxgb.4 -text
+share/man/man4/qlxgbe.4 svneol=native#text/plain
+share/man/man4/qlxge.4 svneol=native#text/plain
 share/man/man4/ral.4 -text
 share/man/man4/random.4 -text
 share/man/man4/rc.4 -text
 share/man/man4/re.4 -text
 share/man/man4/rgephy.4 -text
+share/man/man4/rights.4 svneol=native#text/plain
 share/man/man4/rl.4 -text
 share/man/man4/rndtest.4 -text
 share/man/man4/route.4 -text
 share/man/man4/rp.4 -text
+share/man/man4/rsu.4 svneol=native#text/plain
+share/man/man4/rsufw.4 svneol=native#text/plain
 share/man/man4/rue.4 -text
 share/man/man4/rum.4 -text
 share/man/man4/run.4 -text
