add powerpc pages

--- a/.gitattributes
+++ b/.gitattributes
@@ -57448,6 +57448,19 @@ share/man/man4/man4.i386/viapm.4 -text
 share/man/man4/man4.i386/vpd.4 -text
 share/man/man4/man4.i386/vx.4 -text
 share/man/man4/man4.i386/wl.4 -text
+share/man/man4/man4.powerpc/Makefile svneol=native#text/plain
+share/man/man4/man4.powerpc/abtn.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/adb.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/akbd.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/ams.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/bm.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/cuda.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/pmu.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/powermac_nvram.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/smu.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/snd_ai2s.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/snd_davbus.4 svneol=native#text/plain
+share/man/man4/man4.powerpc/tsec.4 svneol=native#text/plain
 share/man/man4/mcd.4 -text
 share/man/man4/md.4 -text
 share/man/man4/mem.4 -text
