--- a/.gitattributes
+++ b/.gitattributes
@@ -57461,6 +57461,21 @@ share/man/man4/man4.powerpc/smu.4 svneol=native#text/plain
 share/man/man4/man4.powerpc/snd_ai2s.4 svneol=native#text/plain
 share/man/man4/man4.powerpc/snd_davbus.4 svneol=native#text/plain
 share/man/man4/man4.powerpc/tsec.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/Makefile svneol=native#text/plain
+share/man/man4/man4.sparc64/auxio.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/central.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/clkbrd.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/creator.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/ebus.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/eeprom.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/fhc.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/machfb.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/ofw_console.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/openfirm.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/openprom.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/rtc.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/sbus.4 svneol=native#text/plain
+share/man/man4/man4.sparc64/snd_audiocs.4 svneol=native#text/plain
 share/man/man4/mcd.4 -text
 share/man/man4/md.4 -text
 share/man/man4/mem.4 -text
