--- a/share/man/man4/man4.i386/Makefile
+++ b/share/man/man4/man4.i386/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/share/man/man4/man4.i386/Makefile 221961 2011-05-15 14:01:23Z brix $
 
 MAN=	aic.4 \
 	apm.4 \
