tag and lower warns level

--- a/usr.bin/doas/Makefile
+++ b/usr.bin/doas/Makefile
@@ -1,3 +1,4 @@
+# $MidnightBSD$
 SRCS=	parse.y doas.c env.c execvpe.c
 
 PROG=	doas
@@ -7,11 +8,13 @@ BINOWN= root
 BINMODE=4555
 
 CFLAGS+= -I${.CURDIR}
-COPTS+=	-Wall
+CFLAGS+= -Wall
 
 CFLAGS+=-DUSE_PAM -DDOAS_CONF=\"/etc/doas.conf\"
 LDFLAGS+=-lpam
 CFLAGS+=-DHAVE_LOGIN_CAP_H
 LDFLAGS+=-lutil
+
+WARNS=	0
 
 .include <bsd.prog.mk>
