--- a/.gitattributes
+++ b/.gitattributes
@@ -48376,6 +48376,7 @@ etc/rc.d/gbde -text
 etc/rc.d/geli -text
 etc/rc.d/geli2 -text
 etc/rc.d/gptboot -text
+etc/rc.d/growfs -text
 etc/rc.d/gssd -text
 etc/rc.d/hastd -text
 etc/rc.d/hcsecd -text
