--- a/etc/newsyslog.conf
+++ b/etc/newsyslog.conf
@@ -24,6 +24,7 @@
 /var/log/cron				600  3	   100	*     JC
 /var/log/daily.log			640  7	   *	@T00  JN
 /var/log/debug.log			600  7     100  *     JC
+/var/log/init.log			644  3	   100	*     J
 /var/log/kerberos.log			600  7	   100	*     J
 /var/log/lpd-errs			644  7	   100	*     JC
 /var/log/maillog			640  7	   *	@T00  JC
@@ -31,8 +32,12 @@
 /var/log/monthly.log			640  12	   *	$M1D0 JN
 /var/log/pflog				600  3	   100	*     JB    /var/run/pflogd.pid
 /var/log/ppp.log	root:network	640  3	   100	*     JC
+/var/log/devd.log			644  3	   100	*     JC
 /var/log/security			600  10	   100	*     JC
 /var/log/sendmail.st			640  10	   *	168   BN
 /var/log/utx.log			644  3	   *	@01T05 B
 /var/log/weekly.log			640  5	   *	$W6D0 JN
 /var/log/xferlog			600  7	   100	*     JC
+
+<include> /etc/newsyslog.conf.d/*
+<include> /usr/local/etc/newsyslog.conf.d/*
