--- a/share/i18n/esdb/Makefile.part
+++ b/share/i18n/esdb/Makefile.part
@@ -1,4 +1,5 @@
-# $FreeBSD$
+# $MidnightBSD$
+# $FreeBSD: stable/10/share/i18n/esdb/Makefile.part 219019 2011-02-25 00:04:39Z gabor $
 # $NetBSD: Makefile.part,v 1.6 2008/10/25 22:35:36 apb Exp $
 
 MKESDB?= ${.OBJDIR}/../../../../usr.bin/mkesdb_static/mkesdb_static
