update tty configs

--- a/.gitattributes
+++ b/.gitattributes
@@ -48187,6 +48187,9 @@ etc/doas.conf svneol=native#text/plain
 etc/etc.amd64/ttys -text
 etc/etc.i386/ttys -text
 etc/etc.ia64/ttys -text
+etc/etc.mips/ttys -text
+etc/etc.pc98/ttys -text
+etc/etc.powerpc/ttys -text
 etc/etc.sparc64/ttys -text
 etc/fbtab -text
 etc/ftpusers -text
